k8s/mybackend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mybackend-deployment
  labels:
    component: mybackend
    app: my-app

spec:
  template:
    metadata:
      name: mybackend-pod
      labels:
        component: mybackend
        app: my-app
    spec:
      containers:
        - name: mybackend-container
          image: antongreen/mybackend
  replicas: 3
  selector:
    matchLabels:
      app: my-app
      component: mybackend
