k8s/myfrontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myfrontend-deployment
  labels:
    component: myfrontend
    app: my-app-front

spec:
  template:
    metadata:
      name: myfrontend-pod
      labels:
        component: myfrontend
        app: my-app-front
    spec:
      containers:
        - name: mybackend-container
          image: antongreen/myfrontend

  replicas: 3
  selector:
    matchLabels:
      app: my-app-front
      component: myfrontend
