k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    component: web
    app: my-app

spec:
  template:
    metadata:
      name: nginx-pod
      labels:
        component: web
        app: my-app
    spec:
      containers:
        - name: nginx-container
          image: nginx:alpine

  replicas: 3
  selector:
    matchLabels:
      app: my-app
      component: web
