k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres-deployment
  labels:
    app: postgres
    type: db

spec:
  template:
    metadata:
      name: postgres-pod
      labels:
        app: postgres
        type: db
    spec:
      containers:
        - name: postgres-container
          ports:
            - containerPort: 5432
          image: postgres:alpine
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresvolume
      volumes:
        - name: postgresvolume
          persistentVolumeClaim:
            claimName: postgres-pvc

  replicas: 1
  selector:
    matchLabels:
      app: postgres
      type: db
