k8s/mybackend-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybackend-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000

  selector:
    component: mybackend
    app: my-app
