k8s/myfrontend-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: myfrontend-node-port

spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31111
      protocol: TCP
  selector:
    component: myfrontend
    app: my-app-front
