k8s/nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-node-port

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31112
      protocol: TCP
  selector:
    component: nginx
    app: my-app-nginx
