k8s/postgres-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-node-port

spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 31100
      protocol: TCP
  selector:
    app: postgres
