k8s/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: minikube.info
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: mybackend-clusterip
                port:
                  number: 9000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: myfrontend-clusterip
                port:
                  number: 8080
